--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:name=".Workout_Playist"
             android:label="Workout Playists" />
         <activity
-            android:name=".Focus_Playist"
+            android:name=".Focus_Playlist"
             android:label="Focus Playist" />
         <activity
             android:name=".Sleep_Playist"
